--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "foobarcode.elm",
     "title": "Elm support for Brackets",
     "description": "Syntax highlight and current file build with console output.",
-    "homepage": "https://github.com/lepinay/elm-brackets",
+    "homepage": "https://github.com/tommot348/elm-brackets",
     "version": "1.2.0",
-    "author": "FooBarCode (http://foobarcode.me)",
+    "author": "FooBarCode (http://foobarcode.me),tommot348 (https://github.com/tommot348)",
     "license": "MIT",
     "engines": {
         "brackets": ">=1.1.0"
